--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 CherryPy==3.2.2
 bottle==0.11.6
 distribute==0.6.28
-psutil==0.7.1
+futures==2.1.4
+psutil==1.0.1
+pyOpenSSL==0.13
+tornado==3.1
 uuid==1.30
 wsgiref==0.1.2
 xmpppy==0.5.0rc1
